--- a/Entities/App.config
+++ b/Entities/App.config
@@ -7,7 +7,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
+    <add name="ApplicationConnection" 
          connectionString="Data Source= .\SQLEXPRESS; 
                            Initial Catalog=BookEventManagementDB; 
                            Integrated Security=True"
