--- a/Entities/DAL.csproj
+++ b/Entities/DAL.csproj
@@ -52,8 +52,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexts\ApplicationContext.cs" />
+    <Compile Include="Core\IUnitOfWork.cs" />
+    <Compile Include="Migrations\202103070644395_InitialCreate.cs" />
+    <Compile Include="Migrations\202103070644395_InitialCreate.designer.cs">
+      <DependentUpon>202103070644395_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Event.cs" />
+    <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\EventRepository.cs" />
+    <Compile Include="Repository\IEventRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj">
@@ -66,6 +77,11 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202103070644395_InitialCreate.resx">
+      <DependentUpon>202103070644395_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
