--- a/WebBookEventManager/WebBookEventManager.csproj
+++ b/WebBookEventManager/WebBookEventManager.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Events\EventForm.cshtml" />
     <Content Include="Views\Events\Detail.cshtml" />
+    <Content Include="Views\Events\Manage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
