--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -41,12 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\Business\BDCBase.cs" />
+    <Compile Include="Infrastructure\Business\BDC.cs" />
+    <Compile Include="Infrastructure\Business\IBDC.cs" />
+    <Compile Include="Infrastructure\Business\IBDCBase.cs" />
+    <Compile Include="Infrastructure\Business\IOperationResult.cs" />
+    <Compile Include="Infrastructure\Business\OperationResult.cs" />
     <Compile Include="Infrastructure\Constants\Enumerations\EventType.cs" />
     <Compile Include="Infrastructure\Constants\Strings\ApplicationConfiguration.cs" />
+    <Compile Include="Infrastructure\DAL\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Functional\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
